--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Converter App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,7 +15,6 @@
             <div class="header-wrapper"><!-- DÖVİZ KURU ÇEVİRİCİ BAŞLIĞI -->
                 <h4>Currency Converter</h4>
             </div>
-
             <div class="content-wrapper">
                 <input id="amount" type="number" placeholder="Amount" />
 
@@ -94,9 +94,10 @@
 
                 <input type="number" id="result" readonly placeholder="Result" />
 
-                <span>Copyright-Ali Akkaya</span>
+                <span>Copyright - Ali Akkaya</span>
             </div>
         </div>
+
     </div>
 </body>
 
