--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <i class="fa-solid fa-arrow-right"></i>
 
                 <select id="secondCurrencyOption">
-                    <option selected>USD</option>
+                    <option>USD</option>
                     <option>EUR</option>
                     <option>JPY</option>
                     <option>BGN</option>
@@ -73,7 +73,7 @@
                     <option>NOK</option>
                     <option>HRK</option>
                     <option>RUB</option>
-                    <option>TRY</option>
+                    <option selected>TRY</option>
                     <option>AUD</option>
                     <option>BRL</option>
                     <option>CAD</option>
@@ -97,8 +97,9 @@
                 <span>Copyright - Ali Akkaya</span>
             </div>
         </div>
-
     </div>
+    <script src="currency.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
